# io

./: .gitignore  Cargo.toml  README.md
.idx/: dev.nix
src/: biome.rs  main.rs  uv.rs
